# website-engine

./: .gitignore  README.md  eviero.cabal  flake.nix  website-engine.cabal  website-engine.json
.golden/Blog.Wikilinks-Wikilinks-pandoc regression tests -- parsing links-goldenMarkdownToMetaAndContent-[[link]]/: actual
.golden/Blog.Wikilinks-Wikilinks-pandoc regression tests -- parsing links-goldenMarkdownToMetaAndContent-[[link|title]]/: actual
.golden/Blog.Wikilinks-Wikilinks-pandoc regression tests -- parsing links-goldenMarkdownToMetaAndContent-[link]/: actual
.golden/Blog.Wikilinks-Wikilinks-pandoc regression tests -- parsing links-goldenMarkdownToMetaAndContent-[title](link)/: actual
.golden/Blog.Wikilinks-Wikilinks-transforming links-[[page-1]]-transforms-correctly/: golden
.golden/Blog.Wikilinks-Wikilinks-transforming links-cross-group-links/: golden
.golden/Blog.Wikilinks-Wikilinks-transforming links-does-not-find-items-under-the-wrong-key/: actual  golden
.golden/Blog.Wikilinks-Wikilinks-transforming links-does-not-override-custom-names/: golden
.golden/Blog.Wikilinks-Wikilinks-transforming links-does-not-override-names-even-if-they-match-another-item's-id/: golden
app/: Main.hs
site/css/: extra.css
site/page/: testpage.md
site/post/: 0001-test.md  0002-tmp.md  test.md
site/template/: header.html  index.html  page.html  post.html  tag.html  wiki.html
site/wiki/: cooperativa.md  mondragon.md  website-engine.md  wiki.md
spec/Blog/: WikilinksSpec.hs
src/: Blog.hs
src/Blog/: Config.hs  Content.hs  Core.hs  CustomLink.hs  Engine.hs  Item.hs  Pages.hs  Path.hs  Post.hs  Prelude.hs  Settings.hs  Types.hs  Wiki.hs  Wikilinks.hs
src/Blog/Path/: Rel.hs
src/Blog/Settings/: Module.hs  Tag.hs
