cabal-version:   3.4
name:            eviero
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Evie Ciobanu
maintainer:      me@evie.ro

-- copyright:
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

common extensions
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:
    extensions
    , warnings

  exposed-modules:
    Blog
    Blog.Prelude
    Blog.Config
    Blog.Wiki
    Blog.Post
  build-depends:
    , base   ^>=4.18.2.1
    , aeson
    , exceptions
    , filepath
    , lens
    , lens-aeson
    , pandoc
    , shake
    , slick
    , text

  hs-source-dirs:   src
  default-language: Haskell2010

executable eviero
  import:
    extensions
    , warnings

  main-is:          Main.hs
  build-depends:
    , base    ^>=4.18.2.1
    , eviero

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite eviero-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   spec
  main-is:          Main.hs
  build-depends:
    , base    ^>=4.18.2.1
    , eviero
