cabal-version:   3.4
name:            website-engine
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Evie Ciobanu
maintainer:      me@evie.ro

-- copyright:
category:        Web
build-type:      Simple

-- extra-source-files:

common warnings
  ghc-options: -Wall

common extensions
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:
    extensions
    , warnings

  exposed-modules:
    Blog.Engine
    Blog.Item
    Blog.Prelude
    Blog.Settings
    Blog.Wikilinks

  build-depends:
    , aeson
    , attoparsec
    , base        ^>= 4.20.1.0
    , bytestring
    , chronos
    , exceptions
    , filepath
    , lens
    , lens-aeson
    , mtl
    , pandoc
    , pandoc-types
    , shake
    , slick
    , text
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010

executable website-engine
  import:
    extensions
    , warnings

  main-is:          Main.hs
  build-depends:
    , base    ^>= 4.20.1.0
    , aeson
    , attoparsec
    , bytestring
    , chronos
    , exceptions
    , filepath
    , lens
    , lens-aeson
    , mtl
    , pandoc
    , pandoc-types
    , shake
    , slick
    , text
    , vector
    , website-engine

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite website-engine-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   spec
  main-is:          Main.hs
  build-depends:
    , base    ^>= 4.20.1.0
    , website-engine
