cabal-version: 3.4
name:          website-engine
version:       0.1.0.0

-- synopsis:
-- description:
license:       MIT
license-file:  LICENSE
author:        Evie Ciobanu
maintainer:    me@evie.ro

-- copyright:
category:      Web
build-type:    Simple

-- extra-source-files:

common warnings
  ghc-options: -Wall

common extensions
  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:
    extensions
    , warnings

  exposed-modules:
    Blog
    Blog.Content
    Blog.Core
    Blog.Engine
    Blog.Item
    Blog.Path.Rel
    Blog.Prelude
    Blog.Settings
    Blog.Types
    Blog.Wikilinks

  build-depends:
    , aeson
    , attoparsec
    , base              ^>=4.20.1.0
    , bytestring
    , chronos
    , exceptions
    , extra
    , filepath
    , lens
    , lens-aeson
    , mtl
    , mustache
    , pandoc
    , pandoc-types
    , path
    , shake
    , shake-plus
    , template-haskell
    , text
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010

executable website-engine
  import:
    extensions
    , warnings

  main-is:          Main.hs
  build-depends:
    , base            ^>=4.20.1.0
    , path
    , website-engine

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite website-engine-test
  import:
    extensions
    , warnings

  default-language: Haskell2010
  other-modules:    Blog.WikilinksSpec

  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   spec
  main-is:          Spec.hs
  build-depends:
    , aeson
    , base            ^>=4.20.1.0
    , chronos
    , hspec
    , hspec-core
    , hspec-discover
    , hspec-golden
    , mtl
    , pandoc
    , pandoc-types
    , text
    , website-engine
